@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.broadinstitute.consent.http.enumeration.UserFields;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 
@@ -20,13 +19,13 @@ public class UserUpdateFields {
   private static final List<Integer> VALID_ROLE_IDS = Arrays.stream(UserRoles.values())
       .map(UserRoles::getRoleId).toList();
   private String displayName;
-  private Integer institutionId;
   private Boolean emailPreference;
   private List<Integer> userRoleIds;
   private String eraCommonsId;
   private Boolean daaAcceptance;
 
   public UserUpdateFields() {
+    // Default constructor
   }
 
   public String getDisplayName() {
@@ -35,14 +34,6 @@ public class UserUpdateFields {
 
   public void setDisplayName(String displayName) {
     this.displayName = displayName;
-  }
-
-  public Integer getInstitutionId() {
-    return institutionId;
-  }
-
-  public void setInstitutionId(Integer institutionId) {
-    this.institutionId = institutionId;
   }
 
   public Boolean getEmailPreference() {
@@ -100,12 +91,12 @@ public class UserUpdateFields {
   public List<Integer> getRoleIdsToAdd(List<Integer> currentUserRoleIds) {
     return this.getUserRoleIds().stream()
         .filter(
-            id -> {
-              return !currentUserRoleIds.contains(id) && // Don't add any that already exist
+            id ->
+              !currentUserRoleIds.contains(id) && // Don't add any that already exist
                   !IGNORE_ROLE_IDS.contains(id) &&    // Never add ignorable roles
-                  VALID_ROLE_IDS.contains(id);        // Only add roles we know about
-            })
-        .collect(Collectors.toList());
+                  VALID_ROLE_IDS.contains(id)        // Only add roles we know about
+            )
+        .toList();
   }
 
   /**
@@ -119,16 +110,15 @@ public class UserUpdateFields {
   public List<Integer> getRoleIdsToRemove(List<Integer> currentUserRoleIds) {
     return currentUserRoleIds.stream()
         .filter(
-            id -> {
-              return !getUserRoleIds().contains(id) &&
+            id -> !getUserRoleIds().contains(id) &&
                   // Remove roles that are NOT in the new role id list
                   !Objects.equals(id, UserRoles.RESEARCHER.getRoleId()) &&
                   // Never remove the researcher role
                   !IGNORE_ROLE_IDS.contains(id) &&
                   // Never remove ignorable roles
                   VALID_ROLE_IDS.contains(
-                      id);                            // Only remove roles we know about
-            })
+                      id)                            // Only remove roles we know about
+            )
         .toList();
   }
 
@@ -139,15 +129,14 @@ public class UserUpdateFields {
     }
 
     UserUpdateFields that = (UserUpdateFields) o;
-    return Objects.equals(displayName, that.displayName) && Objects.equals(institutionId,
-        that.institutionId) && Objects.equals(emailPreference, that.emailPreference)
+    return Objects.equals(displayName, that.displayName) && Objects.equals(emailPreference, that.emailPreference)
         && Objects.equals(userRoleIds, that.userRoleIds) && Objects.equals(eraCommonsId,
         that.eraCommonsId) && Objects.equals(daaAcceptance, that.daaAcceptance);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(displayName, institutionId, emailPreference, userRoleIds, eraCommonsId,
+    return Objects.hash(displayName, emailPreference, userRoleIds, eraCommonsId,
         daaAcceptance);
   }
 }
